presenter: add start messenger and microphone option in StartStreamView

--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
@@ -21,9 +21,12 @@ menu.options = Einstellungen
 menu.presentation = Vortrag
 menu.recording.start = Aufzeichnung starten
 menu.recording.stop = Aufzeichnung stoppen
-menu.streaming.enable = Stream ein/ausschalten
-menu.streaming.enable.microphone = Mikrofon f\u00fcr Stream ein/ausschalten
-menu.streaming.enable.camera = Kamera f\u00fcr Stream ein/ausschalten
+menu.stream.start = Stream starten
+menu.stream.stop = Stream stoppen
+menu.stream.microphone.start = Mikrofon f\u00fcr Stream einschalten
+menu.stream.microphone.stop = Mikrofon f\u00fcr Stream ausschalten
+menu.stream.camera.start = Kamera f\u00fcr Stream einschalten
+menu.stream.camera.stop = Kamera f\u00fcr Stream ausschalten
 menu.messenger.start = Messenger starten
 menu.messenger.stop = Messenger stoppen
 menu.messenger.window.visible = Messenger anzeigen
