--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -21,9 +21,12 @@ menu.options = Settings
 menu.presentation = Lecture
 menu.recording.start = Start recording
 menu.recording.stop = Stop recording
-menu.streaming.enable = Start/stop stream
-menu.streaming.enable.microphone = Switch microphone on/off for stream
-menu.streaming.enable.camera = Switch camera on/off for stream
+menu.stream.start = Start stream
+menu.stream.stop = Stop stream
+menu.stream.microphone.start = Turn microphone on for stream
+menu.stream.microphone.stop = Turn microphone off for stream
+menu.stream.camera.start = Turn camera on for stream
+menu.stream.camera.stop = Turn camera off for stream
 menu.messenger.start = Start messenger
 menu.messenger.stop = Stop messenger
 menu.messenger.window.visible = Show messenger window
