--- a/lect-presenter-swing/src/main/resources/views/start-stream/start-stream_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/start-stream/start-stream_de_DE.properties
@@ -1,4 +1,6 @@
 start.stream.choose.course = Bitte den zu streamenden Kurs ausw\u00E4hlen
+start.stream.microphone.enable = Mikrofon aktivieren
 start.stream.camera.enable = Kamera aktivieren
+start.stream.messenger.enable = Messenger aktivieren
 start.stream.start = Start
 start.stream.service.error = Kurse k\u00F6nnen nicht geladen werden. Bitte \u00FCberpr\u00FCfen Sie den Zugriffstoken in den Einstellungen.
