buttons can be removed from toolbar

--- a/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_de_DE.properties
@@ -1,5 +1,5 @@
 toolbar.undo.tooltip = Letzte Aktion entfernen
-toolbar.redo.tooltip = Aktion wieder ausf\u00fchren
+toolbar.redo.tooltip = Aktion wieder ausf\u00FChren
 toolbar.font.preview = Vorschau
 toolbar.font.effects = Effekte
 toolbar.font.strikethrough = Durchgestrichen
@@ -12,26 +12,26 @@ toolbar.font.serif = Serif
 toolbar.font.sans-serif = Sans-Serif
 toolbar.font.roman = Roman
 toolbar.font.typewriter = Schreibmaschine
-toolbar.paint.size = Gr\u00f6\u00dfe
-toolbar.pen.tooltip = Stift ausw\u00e4hlen
-toolbar.highlighter.tooltip = Highlighter ausw\u00e4hlen
-toolbar.pointer.tooltip = Pointer ausw\u00e4hlen
-toolbar.line.tooltip = Linien-Werkzeug ausw\u00e4hlen
-toolbar.arrow.tooltip = Pfeil-Werkzeug ausw\u00e4hlen
-toolbar.rectangle.tooltip = Rechteck-Werkzeug ausw\u00e4hlen
-toolbar.ellipse.tooltip = Kreis-Werkzeug ausw\u00e4hlen
-toolbar.select.tooltip = Auswahl-Werkzeug ausw\u00e4hlen
-toolbar.clone.tooltip = Kopier-Werkzeug ausw\u00e4hlen
-toolbar.erase.tooltip = Radiergummi ausw\u00e4hlen
-toolbar.latex.tooltip = LaTeX-Werkzeug ausw\u00e4hlen
-toolbar.text.tooltip = Textwerkzeug ausw\u00e4hlen
-toolbar.text.select.tooltip = Textauswahlwerkzeug ausw\u00e4hlen
-toolbar.clear.tooltip = L\u00f6sche alle Texte und Linien
+toolbar.paint.size = Gr\u00F6\u00DFe
+toolbar.pen.tooltip = Stift ausw\u00E4hlen
+toolbar.highlighter.tooltip = Highlighter ausw\u00E4hlen
+toolbar.pointer.tooltip = Pointer ausw\u00E4hlen
+toolbar.line.tooltip = Linien-Werkzeug ausw\u00E4hlen
+toolbar.arrow.tooltip = Pfeil-Werkzeug ausw\u00E4hlen
+toolbar.rectangle.tooltip = Rechteck-Werkzeug ausw\u00E4hlen
+toolbar.ellipse.tooltip = Kreis-Werkzeug ausw\u00E4hlen
+toolbar.select.tooltip = Auswahl-Werkzeug ausw\u00E4hlen
+toolbar.clone.tooltip = Kopier-Werkzeug ausw\u00E4hlen
+toolbar.erase.tooltip = Radiergummi ausw\u00E4hlen
+toolbar.latex.tooltip = LaTeX-Werkzeug ausw\u00E4hlen
+toolbar.text.tooltip = Textwerkzeug ausw\u00E4hlen
+toolbar.text.select.tooltip = Textauswahlwerkzeug ausw\u00E4hlen
+toolbar.clear.tooltip = L\u00F6sche alle Texte und Linien
 toolbar.extend.tooltip = Zeichenbereich erweitern
-toolbar.whiteboard.tooltip = Whiteboard \u00f6ffnen
+toolbar.whiteboard.tooltip = Whiteboard \u00F6ffnen
 toolbar.displays.tooltip = Ausgabe auf externe Ausgabemedien ein/ausschalten
-toolbar.zoom.in.tooltip = Auswahl vergr\u00f6\u00dfern
-toolbar.zoom.out.tooltip = In Originalgr\u00f6\u00dfe anzeigen
+toolbar.zoom.in.tooltip = Auswahl vergr\u00F6\u00DFern
+toolbar.zoom.out.tooltip = In Originalgr\u00F6\u00DFe anzeigen
 toolbar.zoom.pan.tooltip = Verschieben
 toolbar.recording.start.tooltip = Aufnahme starten
 toolbar.recording.stop.tooltip = Aufnahme stoppen
@@ -39,5 +39,6 @@ toolbar.recording.pause.tooltip = Aufnahme pausieren
 toolbar.grid.tooltip = Gitternetz ein/ausschalten
 toolbar.stream.start.tooltip = Stream starten
 toolbar.stream.stop.tooltip = Stream stoppen
-toolbar.stream.microphone.tooltip = Mikrofon f\u00fcr Stream ein/ausschalten
-toolbar.stream.camera.tooltip = Kamera f\u00fcr Stream ein/ausschalten
+toolbar.stream.microphone.tooltip = Mikrofon f\u00FCr Stream ein/ausschalten
+toolbar.stream.camera.tooltip = Kamera f\u00FCr Stream ein/ausschalten
+toolbar.button.remove = Von Toolbar entfernen
