swing: fixed button name #232

--- a/lect-core/src/main/resources/i18n/core_de_DE.properties
+++ b/lect-core/src/main/resources/i18n/core_de_DE.properties
@@ -11,6 +11,7 @@ button.open = \u00d6ffnen
 button.close = Schlie\u00dfen
 button.remove = Entfernen
 button.discard = Verwerfen
+button.processed = Bearbeitet
 button.new = Hinzuf\u00fcgen
 button.save = Speichern
 button.browse = Durchsuchen...
