--- a/lect-core/src/main/resources/i18n/core_en_US.properties
+++ b/lect-core/src/main/resources/i18n/core_en_US.properties
@@ -11,6 +11,7 @@ button.open = Open
 button.close = Close
 button.remove = Remove
 button.discard = Discard
+button.processed = Processed
 button.new = Add
 button.save = Save
 button.browse = Browse...
