first draft customizable toolbar

--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
@@ -2,43 +2,44 @@ menu.file = Datei
 menu.edit = Bearbeiten
 menu.view = Ansicht
 menu.info = Info
-menu.open = \u00d6ffnen
-menu.close = Schlie\u00dfen
+menu.open = \u00D6ffnen
+menu.close = Schlie\u00DFen
 menu.save.documents = Dokumente abspeichern
 menu.save.quiz.results = Quizergebnisse abspeichern
 menu.exit = Beenden
-menu.undo = R\u00fcckgangig
+menu.undo = R\u00FCckgangig
 menu.redo = Wiederherstellen
 menu.contents = Inhaltsverzeichnis
 menu.fullscreen = Vollbild
 menu.advanced.settings = Erweiterte Einstellungen
+menu.toolbar.customize = Toolbar anpassen
 menu.whiteboard = Whiteboard
 menu.whiteboard.new = Whiteboard erstellen
 menu.grid = Gitternetz ein/ausschalten
 menu.slide.new = Whiteboardseite erstellen
-menu.slide.delete = Whiteboardseite l\u00f6schen
+menu.slide.delete = Whiteboardseite l\u00F6schen
 menu.options = Einstellungen
 menu.presentation = Vortrag
 menu.recording.start = Aufzeichnung starten
 menu.recording.stop = Aufzeichnung stoppen
 menu.stream.start = Stream starten
 menu.stream.stop = Stream stoppen
-menu.stream.microphone.start = Mikrofon f\u00fcr Stream einschalten
-menu.stream.microphone.stop = Mikrofon f\u00fcr Stream ausschalten
-menu.stream.camera.start = Kamera f\u00fcr Stream einschalten
-menu.stream.camera.stop = Kamera f\u00fcr Stream ausschalten
+menu.stream.microphone.start = Mikrofon f\u00FCr Stream einschalten
+menu.stream.microphone.stop = Mikrofon f\u00FCr Stream ausschalten
+menu.stream.camera.start = Kamera f\u00FCr Stream einschalten
+menu.stream.camera.stop = Kamera f\u00FCr Stream ausschalten
 menu.messenger.start = Messenger starten
 menu.messenger.stop = Messenger stoppen
 menu.messenger.window.visible = Messenger anzeigen
-menu.quiz.selection = Quiz ausw\u00e4hlen
+menu.quiz.selection = Quiz ausw\u00E4hlen
 menu.quiz.new = Quiz erstellen
-menu.quiz.close = Quiz schlie\u00dfen
+menu.quiz.close = Quiz schlie\u00DFen
 menu.quiz.embedded = Eingebettete Quizzes
 menu.bookmarks = Lesezeichen
-menu.bookmarks.clear = Alle Lesezeichen l\u00f6schen
+menu.bookmarks.clear = Alle Lesezeichen l\u00F6schen
 menu.bookmarks.add = Aktuelle Folie als Lesezeichen
-menu.bookmarks.previous = Zur\u00fcck zur letzten Position
+menu.bookmarks.previous = Zur\u00FCck zur letzten Position
 menu.bookmarks.goto = Lesezeichen anspringen
 menu.slide.actions = Folienlinks
 menu.log = Log
-menu.about = \u00dcber
+menu.about = \u00DCber
