--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -12,6 +12,7 @@ menu.redo = Redo
 menu.contents = Table of Contents
 menu.fullscreen = Fullscreen
 menu.advanced.settings = Advanced settings
+menu.toolbar.customize = Customize toolbar
 menu.whiteboard = Whiteboard
 menu.whiteboard.new = Create whiteboard
 menu.grid = Switch grid on/off
