presenter: Renamed microphone settings into sound settings. Added option to select an audio playback device in the sound settings.

--- a/lect-presenter-swing/src/main/resources/views/main-settings/main-settings_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-settings/main-settings_de_DE.properties
@@ -3,7 +3,7 @@ settings.displays = Bildschirme
 settings.general = Allgemein
 settings.grid = Gitternetz
 settings.live.stream = Stream
-settings.microphone = Mikrofon
+settings.sound = Sound
 settings.network = Netzwerk
 settings.recording = Aufnahme
 settings.tools = Werkzeuge
