--- a/lect-presenter-swing/src/main/resources/views/main-settings/main-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-settings/main-settings_en_US.properties
@@ -3,7 +3,7 @@ settings.displays = Displays
 settings.general = General
 settings.grid = Grid
 settings.live.stream = Stream
-settings.microphone = Microphone
+settings.sound = Sound
 settings.network = Network
 settings.recording = Recording
 settings.tools = Tools
