presenter-swing: stream settings web-api title

--- a/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_en_US.properties
@@ -11,3 +11,4 @@ stream.settings.broadcast.port = Port
 stream.settings.broadcast.port.tls = SSL/TLS Port
 stream.settings.camera = Camera
 stream.settings.camera.bitrate = Bitrate in kbit/s
+stream.settings.web.api = Web API
