presenter: resilient camera selection with status message on error

--- a/lect-presenter-swing/src/main/resources/views/camera-settings/camera-settings_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/camera-settings/camera-settings_de_DE.properties
@@ -1,3 +1,4 @@
 camera.settings.camera = Kamera
+camera.settings.camera.unavailable = Kamera ist nicht verf\u00fcgbar
 camera.settings.format = Format
 camera.settings.resolution = Aufl\u00f6sung
