presenter: show camera in StartStreamView

--- a/lect-presenter-swing/src/main/resources/views/start-stream/start-stream_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/start-stream/start-stream_en_US.properties
@@ -1,6 +1,8 @@
 start.stream.choose.course = Please select the course to be streamed
 start.stream.microphone.enable = Enable microphone
 start.stream.camera.enable = Enable camera
+start.stream.camera.starting = Starting...
+start.stream.camera.unavailable = Camera is not available
 start.stream.messenger.enable = Enable messenger
 start.stream.start = Start
 start.stream.service.error = Cannot load courses. Please check the access token in the settings.
