presenter: test sound in StartStreamView

--- a/lect-presenter-swing/src/main/resources/views/start-stream/start-stream_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/start-stream/start-stream_de_DE.properties
@@ -10,3 +10,8 @@ start.stream.messenger.enable = Messenger aktivieren
 start.stream.start = Start
 start.stream.settings = Einstellungen
 start.stream.service.error = Kurse k\u00F6nnen nicht geladen werden. Bitte \u00FCberpr\u00FCfen Sie den Zugriffstoken in den Einstellungen.
+start.stream.test.title = Aufnahme Testen
+start.stream.test.capture = Aufnahme
+start.stream.test.playback = Wiedergabe
+start.stream.test.playback.error = Wiedergabefehler
+start.stream.test.playback.error.message = Es ist kein Wiedergabeger\u00e4t angeschlossen
