--- a/lect-presenter-swing/src/main/resources/views/start-stream/start-stream_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/start-stream/start-stream_en_US.properties
@@ -10,3 +10,8 @@ start.stream.messenger.enable = Enable messenger
 start.stream.start = Start
 start.stream.settings = Settings
 start.stream.service.error = Cannot load courses. Please check the access token in the settings.
+start.stream.test.title = Test Capture
+start.stream.test.capture = Capture
+start.stream.test.playback = Playback
+start.stream.test.playback.error = Playback Error
+start.stream.test.playback.error.message = No playback device is connected
