--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_de_DE.properties
@@ -1,7 +1,8 @@
 slides.notes = Notizen
 slides.latex = LaTeX
 slides.message = Nachricht
-slides.share.quiz = Teilen
+slides.quiz.share = Teilen
+slides.quiz.stop = Beenden
 
 speech.requested = hat sich gemeldet
 speech.accept = Annehmen
