--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
@@ -1,7 +1,8 @@
 slides.notes = Notes
 slides.latex = LaTeX
 slides.message = Message
-slides.share.quiz = Share
+slides.quiz.share = Share
+slides.quiz.stop = Stop
 
 speech.requested = raised his hand
 speech.accept = Accept
