presenter: prev/next slide buttons for the toolbar #293

--- a/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_de_DE.properties
@@ -1,5 +1,7 @@
 toolbar.undo.tooltip = Letzte Aktion entfernen
 toolbar.redo.tooltip = Aktion wieder ausf\u00FChren
+toolbar.slide.prev.tooltip = Vorherige Folie
+toolbar.slide.next.tooltip = N\u00E4chste Folie
 toolbar.font.preview = Vorschau
 toolbar.font.effects = Effekte
 toolbar.font.strikethrough = Durchgestrichen
