--- a/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_en_US.properties
@@ -1,5 +1,7 @@
 toolbar.undo.tooltip = Undo last action
 toolbar.redo.tooltip = Redo last action
+toolbar.slide.prev.tooltip = Previous Slide
+toolbar.slide.next.tooltip = Next Slide
 toolbar.font.preview = Preview
 toolbar.font.effects = Effects
 toolbar.font.strikethrough = Strike-through
