presenter: toolbar button for quiz-selection #291

--- a/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_en_US.properties
@@ -43,3 +43,4 @@ toolbar.stream.start.tooltip = Start stream
 toolbar.stream.stop.tooltip = Stop stream
 toolbar.stream.microphone.tooltip = Switch microphone on/off for stream
 toolbar.stream.camera.tooltip = Switch camera on/off for stream
+toolbar.select.quiz.tooltip = Start Quiz
