--- a/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_de_DE.properties
@@ -43,3 +43,4 @@ toolbar.stream.start.tooltip = Stream starten
 toolbar.stream.stop.tooltip = Stream stoppen
 toolbar.stream.microphone.tooltip = Mikrofon f\u00FCr Stream ein/ausschalten
 toolbar.stream.camera.tooltip = Kamera f\u00FCr Stream ein/ausschalten
+toolbar.select.quiz.tooltip = Quiz stellen
