presenter-swing: consistent button naming to stop a quiz #322

--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
@@ -33,7 +33,7 @@ menu.messenger.stop = Messenger stoppen
 menu.messenger.window.visible = Messenger anzeigen
 menu.quiz.selection = Quiz ausw\u00E4hlen
 menu.quiz.new = Quiz erstellen
-menu.quiz.close = Quiz schlie\u00DFen
+menu.quiz.stop = Quiz beenden
 menu.quiz.embedded = Eingebettete Quizzes
 menu.bookmarks = Lesezeichen
 menu.bookmarks.clear = Alle Lesezeichen l\u00F6schen
