--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -33,7 +33,7 @@ menu.messenger.stop = Stop messenger
 menu.messenger.window.visible = Show messenger window
 menu.quiz.selection = Select Quiz
 menu.quiz.new = Create quiz
-menu.quiz.close = Close quiz
+menu.quiz.stop = Stop quiz
 menu.quiz.embedded = Embedded quizzes
 menu.bookmarks = Bookmarks
 menu.bookmarks.clear = Delete all bookmarks
