dev/dedicated rebase ontop of main

--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_de_DE.properties
@@ -3,6 +3,7 @@ slides.latex = LaTeX
 slides.message = Nachricht
 slides.quiz.share = Teilen
 slides.quiz.stop = Beenden
+slides.participants = Teilnehmer
 
 speech.requested = hat sich gemeldet
 speech.accept = Annehmen
