--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
@@ -3,6 +3,7 @@ slides.latex = LaTeX
 slides.message = Message
 slides.quiz.share = Share
 slides.quiz.stop = Stop
+slides.participants = Participants
 
 speech.requested = raised his hand
 speech.accept = Accept
