Example implementation of a participants panel

--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
@@ -2,6 +2,7 @@ slides.notes = Notes
 slides.latex = LaTeX
 slides.message = Message
 slides.share.quiz = Share
+slides.participants = Participants
 
 speech.requested = raised his hand
 speech.accept = Accept
