--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_de_DE.properties
@@ -2,6 +2,7 @@ slides.notes = Notizen
 slides.latex = LaTeX
 slides.message = Nachricht
 slides.share.quiz = Teilen
+slides.participants = Teilnehmer
 
 speech.requested = hat sich gemeldet
 speech.accept = Annehmen
