Introduced CameraProfile for camera settings

--- a/lect-presenter-swing/src/main/resources/views/camera-settings/camera-settings_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/camera-settings/camera-settings_de_DE.properties
@@ -1,4 +1,8 @@
 camera.settings.camera = Kamera
 camera.settings.camera.unavailable = Kamera ist nicht verf\u00fcgbar
 camera.settings.format = Format
-camera.settings.resolution = Aufl\u00f6sung
+camera.settings.quality = Qualit\u00e4t
+camera.settings.quality.low = Niedrig
+camera.settings.quality.medium = Mittel
+camera.settings.quality.high = Hoch
+camera.settings.quality.highest = H\u00f6chste
