--- a/lect-presenter-swing/src/main/resources/views/camera-settings/camera-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/camera-settings/camera-settings_en_US.properties
@@ -1,4 +1,8 @@
 camera.settings.camera = Camera
 camera.settings.camera.unavailable = Camera is not available
 camera.settings.format = Format
-camera.settings.resolution = Resolution
+camera.settings.quality = Quality
+camera.settings.quality.low = Low
+camera.settings.quality.medium = Medium
+camera.settings.quality.high = High
+camera.settings.quality.highest = Highest
