presenter: non-blocking UI when changing camera

--- a/lect-presenter-swing/src/main/resources/views/camera-settings/camera-settings_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/camera-settings/camera-settings_de_DE.properties
@@ -1,4 +1,5 @@
 camera.settings.camera = Kamera
+camera.settings.camera.starting = Starte...
 camera.settings.camera.unavailable = Kamera ist nicht verf\u00fcgbar
 camera.settings.format = Format
 camera.settings.quality = Qualit\u00e4t
