--- a/lect-presenter-swing/src/main/resources/views/camera-settings/camera-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/camera-settings/camera-settings_en_US.properties
@@ -1,4 +1,5 @@
 camera.settings.camera = Camera
+camera.settings.camera.starting = Starting...
 camera.settings.camera.unavailable = Camera is not available
 camera.settings.format = Format
 camera.settings.quality = Quality
