Show external windows for Messages, Speech, and SlidePreview

--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_de_DE.properties
@@ -1,6 +1,10 @@
 slides.notes = Notizen
 slides.latex = LaTeX
 slides.message = Nachricht
+slides.messages = Nachrichten
+slides.slide.preview = Folienvorschau
+slides.speech = Redebeitrag
+slides.currently.no.speech = Aktuell kein Redebeitrag
 slides.quiz.share = Teilen
 slides.quiz.stop = Beenden
 
