Added messages placeholder

--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
@@ -2,6 +2,7 @@ slides.notes = Notes
 slides.latex = LaTeX
 slides.message = Message
 slides.messages = Messages
+slides.no.messages = No messages
 slides.slide.preview = Slides preview
 slides.speech = Speech
 slides.currently.no.speech = Currently no speach
