--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_de_DE.properties
@@ -1,6 +1,7 @@
 slides.notes = Notizen
 slides.latex = LaTeX
 slides.message = Nachricht
+slides.message.send = Senden
 slides.share.quiz = Teilen
 
 speech.requested = hat sich gemeldet
