--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
@@ -1,6 +1,7 @@
 slides.notes = Notes
 slides.latex = LaTeX
 slides.message = Message
+slides.message.send = Send
 slides.quiz.share = Share
 slides.quiz.stop = Stop
 slides.participants = Participants
