Added support for two possible messenger modes. A bidirectional and an unidirectional messenger. The lecturer can choose between those two options, when he starts the messenger.

--- a/lect-presenter-swing/src/main/resources/views/start-course-feature/start-course-feature_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/start-course-feature/start-course-feature_de_DE.properties
@@ -1,4 +1,5 @@
 start.course.feature.choose.course = Bitte den zu streamenden Kurs ausw\u00E4hlen
+start.course.feature.choose.messenger.mode = Bitte die gewünschten Messenger Voreinstellungen ausw\u00E4hlen
 start.course.feature.start = Start
 start.course.feature.settings = Einstellungen
 start.course.feature.service.error = Kurse k\u00F6nnen nicht geladen werden. Bitte \u00FCberpr\u00FCfen Sie den Zugriffstoken in den Einstellungen.
