--- a/lect-presenter-swing/src/main/resources/views/start-course-feature/start-course-feature_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/start-course-feature/start-course-feature_en_US.properties
@@ -1,4 +1,5 @@
 start.course.feature.choose.course = Please select the course to be streamed
+start.course.feature.choose.messenger.mode = Please select the desired Messenger presets
 start.course.feature.start = Start
 start.course.feature.settings = Settings
 start.course.feature.service.error = Cannot load courses. Please check the access token in the settings.
