presenter: quit accepted and pending speech requests

--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_de_DE.properties
@@ -10,3 +10,4 @@ speech.accepted = Angenommen
 speech.canceled = Abgebrochen
 speech.reject = Ablehnen
 speech.rejected = Abgelehnt
+speech.waiting = Warten auf
