--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
@@ -10,3 +10,4 @@ speech.accepted = Accepted
 speech.canceled = Canceled
 speech.reject = Reject
 speech.rejected = Rejected
+speech.waiting = Waiting for
