--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_de_DE.properties
@@ -2,6 +2,8 @@ slides.notes = Notizen
 slides.latex = LaTeX
 slides.message = Nachricht
 slides.message.send = Senden
+slides.message.send.direct = Senden an
+slides.message.cancel = Abbruch
 slides.share.quiz = Teilen
 slides.participants = Teilnehmer
 
