--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
@@ -2,6 +2,8 @@ slides.notes = Notes
 slides.latex = LaTeX
 slides.message = Message
 slides.message.send = Send
+slides.message.send.direct = Send to
+slides.message.cancel = Cancel
 slides.quiz.share = Share
 slides.quiz.stop = Stop
 slides.participants = Participants
