Provide a button to create a slide for a text message

--- a/lect-core/src/main/resources/i18n/core_de_DE.properties
+++ b/lect-core/src/main/resources/i18n/core_de_DE.properties
@@ -12,6 +12,7 @@ button.close = Schlie\u00dfen
 button.remove = Entfernen
 button.discard = Verwerfen
 button.processed = Bearbeitet
+button.create.slide = Folie erstellen
 button.new = Hinzuf\u00fcgen
 button.save = Speichern
 button.browse = Durchsuchen...
