--- a/lect-core/src/main/resources/i18n/core_en_US.properties
+++ b/lect-core/src/main/resources/i18n/core_en_US.properties
@@ -12,6 +12,7 @@ button.close = Close
 button.remove = Remove
 button.discard = Discard
 button.processed = Processed
+button.create.slide = Create slide
 button.new = Add
 button.save = Save
 button.browse = Browse...
