--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -49,6 +49,8 @@ quiz.save.result.success = Quizergebnis wurde erfolgreich gespeichert
 quiz.start.error = Quiz konnte nicht gestartet werden
 quiz.stop.error = Quiz konnte nicht gestoppt werden
 
+message.slide.create.error = Nachrichtenfolie konnte nicht erstellt werden
+
 service.timeout.error = Der Dienst ist derzeit nicht verf\u00fcgbar. Sollte der Fehler dauerhaft auftreten, so wenden Sie sich bitte an den Administrator ihres Vertrauens.
 
 open.document.error = Dokument konnte nicht ge\u00f6ffnet werden
