--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -49,6 +49,8 @@ quiz.save.result.success = Quiz result was saved successfully
 quiz.start.error = Quiz could not be started
 quiz.stop.error = Quiz could not be stopped
 
+message.slide.create.error = Message slide could not be created
+
 service.timeout.error = The service is currently not available. If the error occurs permanently, please contact your trusted administrator.
 
 open.document.error = Document could not be opened
