Feature/better display usage (#377)
* Extend and toggle the slides preview

* Show external windows for Messages, Speech, and SlidePreview

* Added messages placeholder

* Fixed some display issues

* Extend and toggle the slides preview

* Show external windows for Messages, Speech, and SlidePreview

* Added messages placeholder

* Fixed some display issues

* Updated formatting

* Adapted bottom pane behavior

* Select tab based on label

* Show tabs in external window

* Updated message view revalidate

* Refactored whole moveable tab logic

* Fixed behavior of moveable tabs

* Optimized imports

* Fixed a bug where the slide tab was not correctly selected when changing the selected tab

--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
@@ -13,6 +13,17 @@ menu.contents = Inhaltsverzeichnis
 menu.fullscreen = Vollbild
 menu.advanced.settings = Erweiterte Einstellungen
 menu.toolbar.customize = Toolbar anpassen
+menu.external.windows = Externe Fenster
+menu.external.messages = Nachrichten
+menu.external.messages.disconnected = Nachrichten (Bildschirm getrennt)
+menu.external.slide.preview = Folienvorschau
+menu.external.slide.preview.disconnected = Folienvorschau (Bildschirm getrennt)
+menu.external.speech = Redebeitrag
+menu.external.speech.disconnected = Redebeitrag (Bildschirm getrennt)
+menu.messages.position = Nachrichtenleistenposition
+menu.left = Links
+menu.bottom = Unten
+menu.right = Rechts
 menu.whiteboard = Whiteboard
 menu.whiteboard.new = Whiteboard erstellen
 menu.grid = Gitternetz ein/ausschalten
