--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -13,6 +13,17 @@ menu.contents = Table of Contents
 menu.fullscreen = Fullscreen
 menu.advanced.settings = Advanced settings
 menu.toolbar.customize = Customize toolbar
+menu.external.windows = External windows
+menu.external.messages = Messages
+menu.external.messages.disconnected = Messages (Display disconnected)
+menu.external.slide.preview = Slide preview
+menu.external.slide.preview.disconnected = Slide preview  (Display disconnected)
+menu.external.speech = Speech
+menu.external.speech.disconnected = Speech  (Display disconnected)
+menu.messenger.position = Message bar position
+menu.left = Left
+menu.bottom = Bottom
+menu.right = Right
 menu.whiteboard = Whiteboard
 menu.whiteboard.new = Create whiteboard
 menu.grid = Switch grid on/off
