--- a/lect-presenter-swing/src/main/resources/views/about/about_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/about/about_de_DE.properties
@@ -2,6 +2,7 @@ about.title = \u00dcber
 about.info = Info
 about.info.issue = Problem melden oder eine Verbesserung vorschlagen
 about.contributors = Mitwirkende
+about.sponsors = Sponsoren
 about.system = System
 about.system.properties = Die Systemeigenschaften enthalten Informationen zum aktuellen Benutzer und zur aktuellen Version der Java-Laufzeit.
 about.property = Eigenschaft
