presenter-swing: minor changes to about view

--- a/lect-presenter-swing/src/main/resources/views/about/about_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/about/about_de_DE.properties
@@ -3,6 +3,7 @@ about.info = Info
 about.info.issue = Problem melden oder eine Verbesserung vorschlagen
 about.contributors = Mitwirkende
 about.sponsors = Sponsoren
+about.sponsors.description = Dieses Projekt wird finanziell unterstützt von:
 about.system = System
 about.system.properties = Die Systemeigenschaften enthalten Informationen zum aktuellen Benutzer und zur aktuellen Version der Java-Laufzeit.
 about.property = Eigenschaft
