--- a/lect-presenter-swing/src/main/resources/views/about/about_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/about/about_en_US.properties
@@ -3,6 +3,7 @@ about.info = Info
 about.info.issue = Report a problem or suggest an improvement
 about.contributors = Contributors
 about.sponsors = Sponsors
+about.sponsors.description = This project is financially supported by:
 about.system = System
 about.system.properties = System properties include information about the current user and the current version of the Java runtime.
 about.property = Property
