Added a create button in the quiz selection and fixed a bug where the icon was displayed as text in quiz selection

--- a/lect-presenter-swing/src/main/resources/views/select-quiz/select-quiz_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/select-quiz/select-quiz_de_DE.properties
@@ -4,4 +4,5 @@ select.quiz.delete = Quiz l\u00f6schen
 select.quiz.edit = Quiz bearbeiten
 select.quiz.question = Frage
 select.quiz.type = Quizstil
+select.quiz.create = Quiz erstellen
 select.quiz.start = Quiz stellen
