--- a/lect-presenter-swing/src/main/resources/views/select-quiz/select-quiz_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/select-quiz/select-quiz_en_US.properties
@@ -4,4 +4,5 @@ select.quiz.delete = Delete quiz
 select.quiz.edit = Edit quiz
 select.quiz.question = Question
 select.quiz.type = Quiz type
+select.quiz.create = Create quiz
 select.quiz.start = Start quiz
