Show popup when quiz is saved

--- a/lect-presenter-swing/src/main/resources/views/create-quiz/create-quiz_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/create-quiz/create-quiz_de_DE.properties
@@ -12,5 +12,6 @@ create.quiz.option.next.tooltip = Zur n\u00e4chsten Quizoption springen
 create.quiz.option.up.tooltip = Quizoption nach oben verschieben
 create.quiz.option.down.tooltip = Quizoption nach unten verschieben
 create.quiz.save = Quiz speichern
+create.quiz.saved = Quiz gespeichert
 create.quiz.save.tooltip = Quiz speichern und beim Editieren fortfahren
 create.quiz.start = Quiz stellen
