--- a/lect-presenter-swing/src/main/resources/views/create-quiz/create-quiz_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/create-quiz/create-quiz_en_US.properties
@@ -12,5 +12,6 @@ create.quiz.option.next.tooltip = Jump to the next quiz option
 create.quiz.option.up.tooltip = Move quiz option up
 create.quiz.option.down.tooltip = Move quiz option down
 create.quiz.save = Save quiz
+create.quiz.saved = Quiz saved
 create.quiz.save.tooltip = Save quiz and continue with editing
 create.quiz.start = Start quiz
