Provide an option to replace quiz when editing or creating

--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -45,6 +45,7 @@ quiz.generic = Allgemeine Aufgabensammlung
 quiz.delete.error = Quiz konnte nicht gel\u00f6scht werden
 quiz.edit.error = Quiz konnte nicht ge\u00e4ndert werden
 quiz.save.error = Quiz konnte nicht gespeichert werden
+quiz.overwrite.error = Quiz konnte nicht überschrieben werden
 quiz.save.result.success = Quizergebnis wurde erfolgreich gespeichert
 quiz.start.error = Quiz konnte nicht gestartet werden
 quiz.stop.error = Quiz konnte nicht gestoppt werden
