--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -45,6 +45,7 @@ quiz.generic = General task collection
 quiz.delete.error = Quiz could not be deleted
 quiz.edit.error = Quiz could not be edited
 quiz.save.error = Quiz could not be saved
+quiz.overwrite.error = Quiz could not be overwritten
 quiz.save.result.success = Quiz result was saved successfully
 quiz.start.error = Quiz could not be started
 quiz.stop.error = Quiz could not be stopped
