--- a/lect-presenter-swing/src/main/resources/views/create-quiz/create-quiz_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/create-quiz/create-quiz_de_DE.properties
@@ -1,4 +1,5 @@
 create.quiz.title = Quiz erstellen
+create.quiz.edit.title = Quiz bearbeiten
 create.quiz.question = Frage
 create.quiz.type = Quizstil
 create.quiz.type.multiple = Multiple choice
@@ -11,7 +12,9 @@ create.quiz.option.add.tooltip = Neue Quizoption hinzuf\u00fcgen
 create.quiz.option.next.tooltip = Zur n\u00e4chsten Quizoption springen
 create.quiz.option.up.tooltip = Quizoption nach oben verschieben
 create.quiz.option.down.tooltip = Quizoption nach unten verschieben
-create.quiz.save = Quiz speichern
+create.quiz.save = Als neues Quiz speichern
+create.quiz.overwrite = Quiz überschreiben
 create.quiz.saved = Quiz gespeichert
-create.quiz.save.tooltip = Quiz speichern und beim Editieren fortfahren
+create.quiz.overwritten = Quiz überschrieben
+create.quiz.save.tooltip = Quiz speichern und mit dem Editieren fortfahren
 create.quiz.start = Quiz stellen
