presenter: configurable streaming server name

--- a/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_en_US.properties
@@ -1,14 +1,3 @@
 stream.settings.access.token = Access Token
-stream.settings.audio = Audio
-stream.settings.audio.codec = Codec
-stream.settings.audio.format = Format
-stream.settings.broadcast = Broadcast
-stream.settings.broadcast.profile.selected = Active profile: {0}
-stream.settings.broadcast.profile.delete = Delete profile
-stream.settings.broadcast.name = Name
-stream.settings.broadcast.address = Address
-stream.settings.broadcast.port = Port
-stream.settings.broadcast.port.tls = SSL/TLS Port
-stream.settings.camera = Camera
-stream.settings.camera.bitrate = Bitrate in kbit/s
+stream.settings.server.name = Server
 stream.settings.web.api = Web API
