presenter-api: save received text messages in a PDF file #513

--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -56,3 +56,7 @@ service.timeout.error = Der Dienst ist derzeit nicht verf\u00fcgbar. Sollte der 
 open.document.error = Dokument konnte nicht ge\u00f6ffnet werden
 open.page.file.error = Die Datei konnte nicht ge\u00f6ffnet werden
 open.page.uri.error = Der Link konnte nicht ge\u00f6ffnet werden
+
+text.message = Nachricht
+text.message.time = Datum / Uhrzeit
+text.messages = Textnachrichten
