--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -56,3 +56,7 @@ service.timeout.error = The service is currently not available. If the error occ
 open.document.error = Document could not be opened
 open.page.file.error = The file could not be opened
 open.page.uri.error = The link could not be opened
+
+text.message = Message
+text.message.time = Date / Time
+text.messages = Text Messages
