presenter: make use of the audio mixing configuration

--- a/lect-presenter-swing/src/main/resources/views/recording-settings/recording-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/recording-settings/recording-settings_en_US.properties
@@ -2,4 +2,5 @@ recording.settings.audio.format = Audio format
 recording.settings.directory = Recording directory
 recording.settings.notify.to.record = Display a warning message when the recording is not started
 recording.settings.confirm.stop.recording = Confirm the end of the recording
+recording.settings.mix.audio.streams = Mix audio streams of all participants
 recording.settings.page.record.timeout = Page recording timeout (ms)
