--- a/lect-presenter-swing/src/main/resources/views/recording-settings/recording-settings_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/recording-settings/recording-settings_de_DE.properties
@@ -2,4 +2,5 @@ recording.settings.audio.format = Audioformat
 recording.settings.directory = Aufnahmeverzeichnis
 recording.settings.notify.to.record = Warnung bei nichtgestarteter Aufnahme anzeigen
 recording.settings.confirm.stop.recording = Beenden der Aufnahme best\u00e4tigen
+recording.settings.mix.audio.streams = Audioströme aller Teilnehmer mischen
 recording.settings.page.record.timeout = Zeitlimit für Seitenaufzeichnung (ms)
