presenter: set audio playback volume and play a test sound via settings #495

--- a/lect-presenter-swing/src/main/resources/views/sound-settings/sound-settings_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/sound-settings/sound-settings_de_DE.properties
@@ -8,7 +8,8 @@ sound.settings.noise.suppression.moderate = Moderat
 sound.settings.noise.suppression.low = Niedrig
 sound.settings.noise.suppression.high = Hoch
 sound.settings.noise.suppression.very_high = Sehr hoch
-sound.settings.test.title = Aufnahme Testen
+sound.settings.test.microphone = Aufnahme testen
+sound.settings.test.speaker = Lautsprecher testen
 sound.settings.test.capture = Aufnahme
 sound.settings.test.playback = Wiedergabe
 sound.settings.test.playback.error = Wiedergabefehler
