--- a/lect-presenter-swing/src/main/resources/views/sound-settings/sound-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/sound-settings/sound-settings_en_US.properties
@@ -8,7 +8,8 @@ sound.settings.noise.suppression.moderate = Moderate
 sound.settings.noise.suppression.low = Low
 sound.settings.noise.suppression.high = High
 sound.settings.noise.suppression.very_high = Very high
-sound.settings.test.title = Test Capture
+sound.settings.test.microphone = Test Capture
+sound.settings.test.speaker = Test Speaker
 sound.settings.test.capture = Capture
 sound.settings.test.playback = Playback
 sound.settings.test.playback.error = Playback Error
