editor: make use of input validators

--- a/lect-editor-fx/src/main/resources/views/video-export/video-export_de_DE.properties
+++ b/lect-editor-fx/src/main/resources/views/video-export/video-export_de_DE.properties
@@ -4,3 +4,4 @@ video.export.save.name = Name der Aufzeichnung
 video.export.save.location = Speicherort der Aufzeichnung
 video.export.compressed.video = Video
 video.export.vector.player = HTML Vektor Player
+video.export.failed = Video konnte nicht erstellt werden
