--- a/lect-editor-fx/src/main/resources/views/video-export/video-export_en_US.properties
+++ b/lect-editor-fx/src/main/resources/views/video-export/video-export_en_US.properties
@@ -4,3 +4,4 @@ video.export.save.name = Name of the recording
 video.export.save.location = Location of the recording
 video.export.compressed.video = Video
 video.export.vector.player = HTML vector player
+video.export.failed = Could not create video
