presenter: added DocumentTemplateSettingsView and TemplateConfiguration

--- a/lect-presenter-swing/src/main/resources/views/main-settings/main-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-settings/main-settings_en_US.properties
@@ -6,6 +6,7 @@ settings.live.stream = Stream
 settings.sound = Sound
 settings.network = Network
 settings.recording = Recording
+settings.templates = Templates
 settings.tools = Tools
 settings.web.service = Web service
 settings.whiteboard = Whiteboard
