--- a/lect-presenter-swing/src/main/resources/views/main-settings/main-settings_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-settings/main-settings_de_DE.properties
@@ -6,6 +6,7 @@ settings.live.stream = Stream
 settings.sound = Sound
 settings.network = Netzwerk
 settings.recording = Aufnahme
+settings.templates = Templates
 settings.tools = Werkzeuge
 settings.web.service = Web Service
 settings.whiteboard = Whiteboard
